--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,16 @@
     <artifactId>BA</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+	<build>
+    <defaultGoal>install</defaultGoal>
+  </build>
+    <dependencies>
+        <dependency>
+            <groupId>uk.ac.gate</groupId>
+            <artifactId>gate-core</artifactId>
+            <version>8.1</version>
+        </dependency>
+    </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
