wir brauchen den Pfad zu unserer main in Form von com.MyPackage.MyClass

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>com.default.Main</mainClass>
+            <mainClass>SourcePackages.Content.Main</mainClass>
           </manifest>
         </archive>
       </configuration>
