--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
     <artifactId>BA</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-	<build>
-    <defaultGoal>install</defaultGoal>
-	<plugins>
-    <plugin>
+<build>
+  <defaultGoal>install</defaultGoal>
+  <plugins>
+  <plugin>
       <!-- Build an executable JAR -->
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-jar-plugin</artifactId>
@@ -18,23 +18,25 @@
           <manifest>
             <addClasspath>true</addClasspath>
             <classpathPrefix>lib/</classpathPrefix>
-            <mainClass>SourcePackages.Content.Main</mainClass>
+            <mainClass>Content.Main</mainClass>
           </manifest>
         </archive>
       </configuration>
     </plugin>
   </plugins>
-  </build>
+</build>
     <dependencies>
         <dependency>
             <groupId>uk.ac.gate</groupId>
             <artifactId>gate-core</artifactId>
             <version>8.5.1</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jdesktop</groupId>
             <artifactId>beansbinding</artifactId>
             <version>1.2.1</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
     <properties>
